# iiko-office

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/api/: mod.rs
src/api/api_request/: mod.rs
src/api/auth/: mod.rs
src/api/cashshifts_list/: mod.rs
src/api/cashshifts_payments_list/: mod.rs
src/api/consts/: mod.rs
src/api/error/: mod.rs
src/api/get_version/: mod.rs
src/api/logout/: mod.rs
src/api/olap/: mod.rs
src/api/olap_columns/: mod.rs
src/cfg/: mod.rs
src/gui/: mod.rs
src/gui/about/: mod.rs
src/gui/common/: mod.rs
src/gui/common/datepicker/: mod.rs
src/gui/common/datetime/: mod.rs
src/gui/common/drag_space/: mod.rs
src/gui/common/logo/: mod.rs
src/gui/common/message_bus/: mod.rs
src/gui/common/period_list/: mod.rs
src/gui/common/table/: mod.rs
src/gui/common/utils/: mod.rs
src/gui/login/: mod.rs
src/gui/main/: mod.rs
src/gui/main/menu/: mod.rs
src/gui/main/menu/buttons/: mod.rs
src/gui/main/menu/buttons/cashshifts/: mod.rs
src/gui/main/menu/buttons/olap/: mod.rs
src/gui/main/menu/buttons/olap_reports/: mod.rs
src/gui/main/menu/tabs/: mod.rs
src/gui/main/menu/tabs/cashshifts/: mod.rs
src/gui/main/menu/tabs/cashshifts_payments/: mod.rs
src/gui/main/menu/tabs/olap/: mod.rs
src/gui/main/menu/tabs/olap_reports/: mod.rs
src/gui/main/menu/view/: mod.rs
src/gui/main/menubar/: mod.rs
src/gui/main/statusbar/: mod.rs
src/gui/translation/: mod.rs
